tests/ui/resolve/resolve-conflict-item-vs-import.stderr
error[E0255]: the name `transmute` is defined multiple times
  --> $DIR/resolve-conflict-item-vs-import.rs:3:1
   |
LL | use std::mem::transmute;
   |     ------------------- previous import of the value `transmute` here
LL |
LL | fn transmute() {}
   | ^^^^^^^^^^^^^^ `transmute` redefined here
   |
   = note: `transmute` must be defined only once in the value namespace of this module
help: you can use `as` to change the binding name of the import
   |
LL | use std::mem::transmute as other_transmute;
   |                         ++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0255`.
